<resources>
    <string name="app_name">Simple Hero</string>

    <string name="title_homePage">Ideas</string>
    <string name="title_section2">Thank for help</string>
    <string name="title_section3">To Do</string>
    <string name="title_section4">Achievements</string>
    <string name="title_section5">Help/Legend</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>


    <string name="facebook_app_id">1611471785780941</string>
    <string name="title_activity_activity_add_idea">Add Idea</string>



    <string name="hint_title_idea">The idea in a few words</string>
    <string name="hint_description_idea">A detailed description of the idea, how to accomplish it(optional)</string>
    <string name="hint_search_hero">Search hero to thank</string>
    <string name="hint_message_thanks">What do you thank for?</string>

    <string name="buttonToTask">I can do this!</string>
    <string name="errorTextNoIdeaChecked">You have not selected the type</string>
    <string name="errorNoHeroSelected">You have not selected a hero</string>
    <string name="errorNoMessageThank">You have not written a message</string>


    <string name="legendDollar"> Ideas that involve financial measures such as makind a donation to an organisation</string>
    <string name="legendVolunteer">Ideas that involve volunteering, helping without expecting to receive something in return</string>
    <string name="legendSmile">Ideas that can bring a smile on people\'s faces, that make the world optimistic and cheerful</string>
    <string name="legendThank">Badge received when a person thanks you for your help</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>





</resources>
