<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.Vlad.Herescu.simplehero.View.IdeasFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <AutoCompleteTextView

            android:id="@+id/spinnerListFriends"
            android:layout_width="match_parent"
            android:layout_weight="0.1"
            android:layout_height="0dp"
            android:ems="10"
            android:hint="@string/hint_search_hero"
        />
        <TextView
            android:id="@+id/textViewErrorHeroName"
            android:text="@string/errorNoHeroSelected"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:visibility="gone"
            />

        <EditText
            android:id="@+id/editTexthanksMessage"
            android:layout_width="match_parent"
            android:layout_weight="0.9"
            android:layout_height="0dp"
            android:hint="@string/hint_message_thanks"
        />
        <TextView
            android:id="@+id/textViewErrorThankMessage"
            android:text="@string/errorNoMessageThank"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:visibility="gone"
            />



    </LinearLayout>

    <android.support.design.widget.FloatingActionButton android:id="@+id/fabThankPerson"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_send_white_24dp" />

</android.support.design.widget.CoordinatorLayout>