<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Vlad.Herescu.simplehero.View.LegendFragment"
    android:orientation="vertical"
    android:layout_marginLeft="15dp"
    android:layout_marginStart="15dp"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"

        android:weightSum="1"
    >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dollar"
            android:layout_marginRight="5dp"
            android:layout_weight="0.2"
        />

        <TextView
            android:id="@+id/textViewLegendDollar"
            android:layout_width="0dp"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/legendDollar"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="1"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_volunteer"
            android:layout_marginRight="5dp"
            android:layout_weight="0.2"
            />

        <TextView
            android:id="@+id/textViewLegendVolunteer"
            android:layout_width="0dp"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/legendVolunteer"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="1"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_smile"
            android:layout_marginRight="5dp"
            android:layout_weight="0.2"
            />

        <TextView
            android:id="@+id/textViewLegendSmile"
            android:layout_width="0dp"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/legendSmile"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="1"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_thanks"
            android:layout_marginRight="5dp"
            android:layout_weight="0.2"
            />

        <TextView
            android:id="@+id/textViewLegendThanks"
            android:layout_width="0dp"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/legendThank"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>

</LinearLayout>