<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context="com.Vlad.Herescu.simplehero.View.ActivityAddIdea">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1">


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioGroupIdeaType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_finance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="FINANCE"
            android:drawableRight="@drawable/ic_dollar" />
        <RadioButton android:id="@+id/radio_attitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="VOLUNTEER"
            android:drawableRight="@drawable/ic_volunteer"
            />
        <RadioButton android:id="@+id/radio_volunteer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="POSITIVE_ATITUDE"
            android:drawableRight="@drawable/ic_smile"
            />
    </RadioGroup>
    <TextView
            android:id="@+id/textViewErrorSelection"
            android:text="@string/errorTextNoIdeaChecked"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:gravity="center_horizontal"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30"
        android:hint="@string/hint_title_idea"
        android:maxLength="100"
        android:id="@+id/editTextIdeaShort"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="100 characters remaining"
        android:textColor="@color/colorAccent"
        android:id="@+id/textViewRemainingLetters"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.60"
        android:hint="@string/hint_description_idea"
        android:id="@+id/editTextIdeaDescription"
        />



</LinearLayout>

    <android.support.design.widget.FloatingActionButton android:id="@+id/fabUploadIdea"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_send_white_24dp" />

</android.support.design.widget.CoordinatorLayout>

